# husky

./: .gitignore  README.md  arm_take.py  cpcb.sh  export.sh  identify_object_and_perceive_depth.py  install.sh  locate_ and_move_to_object.py  notes.txt  ultralytics.py  ultralytics_modified.py  ultralytics_segmentation.py  view_object_segmentation.py  view_objects.py
archive/robot/: factory.py  protocol.py  robot.py
config/: velodyne_config
data_acquisition_pkg/: CMakeLists.txt  package.xml
data_acquisition_pkg/src/: record_camera_feed.py  record_scan_to_bag.py  view_recording.py
docs/: dual_launch.xml  no_namespace_dual_launch.xml  pose_notes.txt
ml_test/: CMakeLists.txt  package.xml
ml_test/config/: camera_topics_and_YOLO_models.yaml  robot_navigation_to_object.yaml
ml_test/launch/: gps_to_cartesian.launch  object_perception.launch  robot_navigate_to_object.launch  view_objects.launch
ml_test/src/: cartesian_listener.py  gps_publisher.py  identify_object_and_perceive_depth.py  robot_navigation_to_object.py  robot_navigation_to_object_2.py  view_with_YOLO.py
msgs/: RobotMsg.msg  RobotSrv.srv
obj_detect_based_arm_movement/: UR_left_arm_obj_following.py
ros_scripts/ros_scripts/: arm_take.py  identify_and_calculate_distances_of_multiple_objects.py  receiver.py  ultralytics.py  ultralytics_modified.py
scripts/: arms_server.sh  cpcb.sh  export.sh  source.sh  term.sh  tmux.sh
scripts/cb_mgmt/: build_ur.sh  export.sh  (+5 more)
src/: README.md
src/components/urcap/ur_client/: CMakeLists.txt
src/components/urcap/ur_client/include/: release_brakes.h
src/components/urcap/ur_client/src/: release_brakes.cpp
src/integration/ros_api/arm_server/: CMakeLists.txt  arm_server_r.py  arms.launch  arms_r.launch  package.xml
src/msgs/: CMakeLists.txt
src/msgs/srv/: GenericSrv.srv
tests/: CMakeLists.txt  package.xml
tst/: run_tests.sh
(+168 files in other folders)
