<?xml version="1.0"?>
<package format="2">
  <name>arms_r</name>
  <version>0.0.1</version>
  <description>A ROS package for controlling robotic arms.</description>

  <maintainer email="dicelab99@gmail.com">DICE Labs</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
